--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,58 @@
+
+/*.navbar {*/
+    /*overflow: hidden;*/
+    /*background-color: orangered;*/
+    /*position: fixed; !* Set the navbar to fixed position *!*/
+    /*top: 0; !* Position the navbar at the top of the page *!*/
+    /*width: 100%; !* Full width *!*/
+/*}*/
+/*.navbar ul{*/
+    /*list-style-type: none;*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*overflow: hidden;*/
+    /*background-color: #333;*/
+/*}*/
+
+/*}*/
+body{
+}
+/*making changes to navbar */
+
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navbar li {
+    float: left;
+}
+
+.navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navbar li a:hover {
+    background-color: #111;
+}
+.navbar image{
+    max-height: 20px;
+    max-width: 20px;
+}
+.centered {
+    position: fixed; /* or absolute */
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
+}
 #homepage{
     position: fixed;
     top: 50%;
@@ -87,4 +142,15 @@ input{
     display: none;
     width: 50%;
     margin: 0 auto;
+}
+
+#footer {
+    background-color: dimgray;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333333;
+    color: white;
+    text-align: center;
 }
